//this provides the version of protocol buffers to use
syntax = "proto3";

//give a number of configuration options
option java_multiple_files = true;
option java_package = "create.security.card";
option java_outer_classname = "newHire2ServiceImpl";

package newHire1;

service newHire1{
	//creating the security card 
	rpc createCard(stream card) returns (cardCreated);
	//seeing all security cards
	rpc seeCards(RequestCards) returns (stream CardsReturned);
	//delete security card
	rpc deleteCard(SpecifyCard) returns (CardDeleted);
}

message card{
	string text = 1;
}

message cardCreated{
	string value = 1;
}

message RequestCards{
	string text = 1;
}

message CardsReturned{
	string value = 1;
}

message SpecifyCard{
	string text = 1;
}

message CardDeleted{
	string value =1;
}